--- a/flapper-news/views/index.ejs
+++ b/flapper-news/views/index.ejs
@@ -40,7 +40,7 @@
         posted by {{post.author}} |
       </span>
       <span>
-        <a href="#/posts/{{$index}}">Comments</a>
+        <a href="#/posts/{{post._id}}">Comments</a>
       </span>
     </div>
 
